# fw-nrfconnect-nrf

./: west.yml
applications/connectivity_bridge/: overlay-ot.conf
applications/matter_bridge/: CMakeLists.txt  Kconfig  overlay-bt_wifi_provisioning.conf  prj.conf
applications/matter_bridge/src/: app_task.cpp
applications/matter_weather_station/: CMakeLists.txt  Kconfig
applications/matter_weather_station/src/: app_event.h  app_task.cpp  app_task.h  generic_switch.cpp  generic_switch.h  weather-station.matter  weather-station.zap  zcl_callbacks.cpp
applications/serial_lte_modem/: CMakeLists.txt  Kconfig  nrf9160dk_nrf9160ns.overlay  overlay-native_tls.conf  prj.conf
applications/serial_lte_modem/doc/: GPS_AT_commands.rst  Generic_AT_commands.rst  HTTPC_AT_commands.rst  ICMP_AT_commands.rst  MQTT_AT_commands.rst  TCPIP_AT_commands.rst  slm_description.rst
applications/serial_lte_modem/src/: main.c  slm_at_cmng.c  slm_at_commands.c  slm_at_host.c  slm_at_icmp.c  slm_at_indicator.c  slm_at_indicator.h  slm_at_tcp_proxy.c  slm_at_tcp_proxy.h  slm_at_tcpip.c  slm_at_udp_proxy.c  slm_at_udp_proxy.h  slm_diag.c  slm_diag.h  slm_native_tls.c  (+6 more)
drivers/sensor/: CMakeLists.txt  Kconfig
include/net/: wifi_mgmt_ext.h
include/sensor/: max17261ll.h
lib/at_cmd_parser/: at_utils.h
lib/edge_impulse/: Kconfig
lib/lte_link_control/: lte_lc.c
lib/nrf_modem_lib/: nrf91_sockets.c
modules/openthread/: Kconfig.dectnr  Kconfig.features
samples/wifi/usb_adapter/: CMakeLists.txt  Kconfig  prj.conf
samples/wifi/usb_adapter/src/: main.c
subsys/net/: CMakeLists.txt
(+152 files in other folders)
